# edgeai

./: .coveragerc  .gitignore  CLAUDE.md  CTO_EXECUTIVE_REPORT.md  GPU_TRAINING_RESULTS.md  IMPLEMENTATION_STATUS.md  LOCAL_GPU_EXECUTION_GUIDE.md  PRE_EXECUTION_VALIDATION_CHECKLIST.md  README.md  SESSION_4_PLAN.md  SESSION_4_SUMMARY.md  SESSION_5_SUMMARY.md  START_HERE_GPU_TRAINING.md  WEB_ENVIRONMENT_COMPLETION_REPORT.md  WEB_ENVIRONMENT_DEEP_SCAN_REPORT.md  WEB_ENVIRONMENT_VALIDATION_REPORT.md  quick_start_gpu.bat  requirements.txt  setup.py
ai-models/: README.md  config.yaml
android-driver/: README.md  settings.gradle.kts
android-dtg/: README.md  build_with_studio_java.bat  settings.gradle.kts
android-dtg/app/src/main/cpp/: CMakeLists.txt  can_parser.cpp  snpe_engine.cpp  uart_reader.cpp
data-generation/: README.md  synthetic_driving_simulator.py
datasets/: test.csv  val.csv
docs/: API_REFERENCE.md  BLACKBOX_INTEGRATION_FEASIBILITY.md  GAP_ANALYSIS_PRODUCTION_VS_CURRENT.md  GPU_REQUIRED_TASKS.md  INTEGRATION_ANALYSIS.md  LIGHTGBM_ANDROID_INTEGRATION.md  MCP_SETUP_GUIDE.md  MQTT_ARCHITECTURE.md  PHASE1_DEPLOYMENT_GUIDE.md  PHASE2_IMPLEMENTATION.md  PHASE3_TESTING.md  PROJECT_STATUS.md  RECURSIVE_WORKFLOW.md  SKILLS_MCP_ANALYSIS.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  VOICE_EDGE_OPTIMIZATION_ANALYSIS.md  WEB_BASED_ROADMAP.md
fleet-integration/: README.md
patent-export/: PATENT_FILING_SUMMARY.md
scripts/: README.md  benchmark_performance.sh  format_code.sh  generate_coverage.sh  run_all_tests.sh  security_scan.sh  type_check.sh  verify_environment.sh  (+1 more)
(+126 files in other folders)
